My profect is done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick | Projects</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
 <body>
     <!-- Header section start -->
@@ -26,5 +27,63 @@
         </div>
     </header>
     <!-- Header section end -->
+    <!-- Banner section start -->
+    <section class="banner">
+        <div class="wrapper1">
+            <div class="b_content">
+                <h1 class="b_h1">It's time to amplify your <span>online business</span></h1>
+                <p class="b_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. </p>
+                <div class="b_image">
+                    <img src="img/banner.jpg" alt="QUICK">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Banner section end -->
+    <!-- Successful section start -->
+    <section class="successful">
+        <div class="wrapper1">
+            <div class="s_content">
+                <div class="s_left">
+                    <h2>3k+</h2>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt moult anim id est laborum.</p>
+                </div>
+                <div class="s_right">
+                    <h1>Successfully completed projects & ideas</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Successful section end -->
+    <!-- Services section start -->
+    <section class="service">
+        <div class="wrapper">
+            <div class="s_wrapper">
+                <div class="s_image first_image">
+                    <img src="img/s_img_1.jpg" alt="QUICK">
+                    <h3>Unleash you creativity</h3>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <div class="s_image second_image">
+                    <img src="img/s_img_2.jpg" alt="QUICK">
+                    <h3>Unleash you creativity</h3>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulla pariatur.</p>
+                </div>
+                <div class="s_image third_image">
+                    <img src="img/s_img_3.jpg" alt="QUICK">
+                    <h3>Unleash you creativity</h3>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulla pariatur.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Services section end -->
+    <!-- Footer section start -->
+    <footer>
+        <div class="f_content">
+            <p>© Copyright by <b>LEDP SH E R PU R.</b> All right Reserved 2020 </p>
+        </div>
+    </footer>
+    <!-- Footer section end -->
 </body>
 </html>
